--- a/style.css
+++ b/style.css
@@ -188,10 +188,10 @@ html{
 @media (max-width: 480px) {
   .background-video {
     width: 100%;
-    height: 40vh;
-    object-fit: contain;
+    height: 200px;
+    object-fit: cover;
     top: 0;
-    margin-top: -40px;
+    margin-top: 0px;
   }
 }
 
